--- a/.github/workflows/.yaml/unittests.yaml
+++ b/.github/workflows/.yaml/unittests.yaml
@@ -10,7 +10,9 @@
 
 \f0\fs28 \cf2 \cb3 \expnd0\expndtw0\kerning0
 name: Continuous Integration\cf4 \cb1 \
-\cf2 \cb3 on: [push]\cf4 \cb1 \
+\pard\pardeftab720\partightenfactor0
+\cf2 \cb3 on: [push, pull_request]\cf4 \cb1 \
+\pard\pardeftab720\partightenfactor0
 \cf2 \cb3 jobs:\cf4 \cb1 \
 \cf2 \cb3 \'a0\'a0build:\cf4 \cb1 \
 \cf2 \cb3 \'a0\'a0\'a0\'a0runs-on: ubuntu-latest\cf4 \cb1 \
